tests/passing/when.db
const var health = 10!
when (health = 0) {
   print("You lose")!
}